<resources>
    <string name="app_name">WiddleApp</string>
    <string name="next">Next</string>
    <string name="add_video">Add Video</string>
    <string name="choose_video">Choose Video</string>
    <string name="add_contact">Add Contact</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="description">Description</string>
    <string name="add_now">Add Now</string>
</resources>